--- a/lib/l10n/intl_bo.arb
+++ b/lib/l10n/intl_bo.arb
@@ -4282,7 +4282,7 @@
   "joinPublicTrip": "མི་ཚེས་ལ་ལོག་འབད།",
   "startOwnTrip": "ངེད་རང་གི་ལོག་ལ་སྦྱོར་བཅོས།",
   "@@locale": "bo",
-  "@@last_modified": "2025-11-20 12:39:14.389283",
+  "@@last_modified": "2025-11-20 14:54:09.235231",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -10326,6 +10326,11 @@
     "placeholders": {}
   },
   "@changeCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "practiceActivityCompleted": "Praktik aktiviti telah diselesaikan",
+  "@practiceActivityCompleted": {
     "type": "String",
     "placeholders": {}
   }
