--- a/lib/l10n/intl_eo.arb
+++ b/lib/l10n/intl_eo.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-20 12:39:27.591280",
+  "@@last_modified": "2025-11-20 14:54:18.264427",
   "about": "Prio",
   "@about": {
     "type": "String",
@@ -11665,6 +11665,11 @@
     "placeholders": {}
   },
   "@changeCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "practiceActivityCompleted": "Praktika aktiveco finita",
+  "@practiceActivityCompleted": {
     "type": "String",
     "placeholders": {}
   }
