--- a/lib/l10n/intl_et.arb
+++ b/lib/l10n/intl_et.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "et",
-  "@@last_modified": "2025-11-20 12:38:38.325390",
+  "@@last_modified": "2025-11-20 14:53:49.442060",
   "about": "Rakenduse teave",
   "@about": {
     "type": "String",
@@ -10847,6 +10847,11 @@
     "placeholders": {}
   },
   "@changeCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "practiceActivityCompleted": "Harjutustegevus lõpetatud",
+  "@practiceActivityCompleted": {
     "type": "String",
     "placeholders": {}
   }
