--- a/lib/l10n/intl_fa.arb
+++ b/lib/l10n/intl_fa.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-20 12:39:18.369784",
+  "@@last_modified": "2025-11-20 14:54:11.691213",
   "repeatPassword": "تکرار رمزعبور",
   "@repeatPassword": {},
   "about": "درباره",
@@ -11308,6 +11308,11 @@
     "placeholders": {}
   },
   "@changeCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "practiceActivityCompleted": "فعالیت تمرینی کامل شد",
+  "@practiceActivityCompleted": {
     "type": "String",
     "placeholders": {}
   }
