--- a/lib/l10n/intl_hi.arb
+++ b/lib/l10n/intl_hi.arb
@@ -4487,7 +4487,7 @@
   "playWithAI": "अभी के लिए एआई के साथ खेलें",
   "courseStartDesc": "पैंजिया बॉट कभी भी जाने के लिए तैयार है!\n\n...लेकिन दोस्तों के साथ सीखना बेहतर है!",
   "@@locale": "hi",
-  "@@last_modified": "2025-11-20 12:39:26.351630",
+  "@@last_modified": "2025-11-20 14:54:17.425082",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11661,6 +11661,11 @@
     "placeholders": {}
   },
   "@changeCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "practiceActivityCompleted": "अभ्यास गतिविधि पूरी हुई",
+  "@practiceActivityCompleted": {
     "type": "String",
     "placeholders": {}
   }
