--- a/lib/l10n/intl_hr.arb
+++ b/lib/l10n/intl_hr.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "hr",
-  "@@last_modified": "2025-11-20 12:38:30.674058",
+  "@@last_modified": "2025-11-20 14:53:43.599159",
   "about": "Informacije",
   "@about": {
     "type": "String",
@@ -10948,6 +10948,11 @@
     "placeholders": {}
   },
   "@changeCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "practiceActivityCompleted": "Aktivnost vježbanja završena",
+  "@practiceActivityCompleted": {
     "type": "String",
     "placeholders": {}
   }
