--- a/lib/l10n/intl_nb.arb
+++ b/lib/l10n/intl_nb.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-20 12:38:47.529512",
+  "@@last_modified": "2025-11-20 14:53:55.552111",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -11669,6 +11669,11 @@
     "placeholders": {}
   },
   "@changeCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "practiceActivityCompleted": "Øvingsaktivitet fullført",
+  "@practiceActivityCompleted": {
     "type": "String",
     "placeholders": {}
   }
