--- a/lib/l10n/intl_nl.arb
+++ b/lib/l10n/intl_nl.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-20 12:39:13.229885",
+  "@@last_modified": "2025-11-20 14:54:08.318051",
   "about": "Over ons",
   "@about": {
     "type": "String",
@@ -10576,6 +10576,11 @@
     "placeholders": {}
   },
   "@changeCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "practiceActivityCompleted": "Oefenactiviteit voltooid",
+  "@practiceActivityCompleted": {
     "type": "String",
     "placeholders": {}
   }
