rain confetti on activity finish (#4715)
* rain confetti on activity finish

also add continue button, and change copy for completed single practice activities

* fix: show confetti popup when finish all activities with grammar activity

* translations

---------

Co-authored-by: ggurdin <ggurdin@gmail.com>

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4955,6 +4955,7 @@
   "teacherModeTitle": "Teacher Mode",
   "teacherModeDesc": "Toggle to unlock all topics and activities. Course admin only.",
   "noSavedActivitiesYet": "Activities will appear here once they are completed and saved.",
+  "practiceActivityCompleted": "Practice activity completed",
   "changeCourse": "Change course",
   "changeCourseDesc": "Here you can change this course's course plan."
 }
